Prevent scrolling on iOS when the navigation is opened

--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -2,6 +2,7 @@
 .navigation-opened {
   @media(max-width: $tablet){
     overflow: hidden;
+    position: fixed;
   }
 
   #header {
